syntax = "proto3";
package interaction;
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

// request carries a raw user interaction
message InteractionRequest {
  string user_id  = 1;
  string payload  = 2;
  google.protobuf.Timestamp received_at = 3;
}

// single annotation key/value pair
message Annotation {
  string key   = 1;
  string value = 2;
}

// response carries all of the annotations
message InteractionResponse {
  repeated Annotation annotations = 1;
}

service InteractionService {
  // simple unary RPC
  rpc AnnotateInteraction (InteractionRequest) returns (InteractionResponse);
  
  // client-streaming RPC
  rpc StreamAnnotateInteractions (stream InteractionRequest) 
    returns (InteractionResponse);
  
  // Bidirectional-streaming RPC
  rpc ChatAnnotate(stream InteractionRequest) returns (stream InteractionResponse);

}


